# k230_sdk

./: .gitignore  .last_conf
board/common/post_copy_rootfs/etc/init.d/: rcS
src/big/kmodel/: version
src/big/kmodel/ai_poc/kmodel/: anomaly_det.kmodel  bytetrack_yolov5n.kmodel  face_detection_hwc.kmodel  face_glasses.kmodel  face_mask.kmodel  flower_rec.kmodel  head_detection.kmodel  helmet.kmodel  human_seg_2023mar.kmodel  ocr_det.kmodel  ocr_rec.kmodel  person_pulc.kmodel  traffic.kmodel  vehicle.kmodel  vehicle_attr_yolov5n.kmodel  yolov8n_640.kmodel
src/big/kmodel/ai_poc/utils/: dict_ocr_16.txt  trans_src.model  trans_tag.model  wav_play.elf
src/big/kmodel/ai_poc/utils/file/: phone_id_map_mix.txt
src/big/kmodel/ai_poc/utils/file/g2p_en/cmudict/: cmudict
src/big/kmodel/ai_poc/utils/file/pinyin_txt/: small_pinyin.txt
src/big/kmodel/door_lock/: depth.kmodel  ir.kmodel  mbface.kmodel
src/big/kmodel/peephole/: person_detect_yolov5n.kmodel
src/big/mpp/userapps/sample/: Makefile
src/big/mpp/userapps/sample/fastboot_app/: CMakeLists.txt
src/big/mpp/userapps/sample/sample_100ask/: Makefile
src/big/mpp/userapps/sample/sample_100ask/elf/: sample_vicap_100ask.elf  sample_vivo_mipi.elf  sample_vo_mipi.elf
src/big/mpp/userapps/sample/sample_100ask/sample_vicap_100ask/: Makefile  sample_vicap_100ask.c
src/big/mpp/userapps/sample/sample_100ask/sample_vivo_mipi/: Makefile  sample_vivo_100ask.c
src/big/mpp/userapps/sample/sample_100ask/sample_vo_mipi/: Makefile  sample_vo_100ask.c
src/big/mpp/userapps/sample/sample_triple_camera_facedetect/: CMakeLists.txt
src/big/mpp/userapps/sample/share/pkgconfig/: lvgl.pc
src/big/nncase/examples/: CMakeLists.txt  README.md  build_app.sh  build_model.sh
src/big/nncase/examples/image_classify/: CMakeLists.txt  main.cc
src/big/nncase/examples/image_classify/data/: cpp.sh
src/big/nncase/examples/image_face_detect/: CMakeLists.txt  main.cc  mobile_retinaface.cc  model.h
src/big/nncase/examples/image_face_detect/data/: cpp.sh
src/big/nncase/examples/models/: mobile_retinaface.onnx
src/big/nncase/examples/object_detect/: CMakeLists.txt  main.cc  object_detect.cc  object_detect.h  utils.h
src/big/nncase/examples/object_detect/data/: cpp.sh
src/big/nncase/examples/scripts/: mbv2_tflite.py  mobile_retinaface.py  yolov5s_onnx.py  yolov5s_onnx_simu.py
src/big/nncase/riscv64/nncase/include/nncase/: version.h
src/big/nncase/riscv64/nncase/lib/cmake/nncase_rt_modules_k230/: nncase_rt_modules_k230Targets.cmake
src/big/nncase/riscv64/nncase/lib/cmake/nncaseruntime/: nncaseruntimeConfig.cmake  nncaseruntimeTargets.cmake
src/big/nncase/riscv64/rvvlib/include/: k230_math.h  nms.h  rvv_math.h
src/big/rt-smart/kernel/bsp/maix3/board/mpp/: mpp_init.c
src/big/utils/examples/hhb/: CMakeLists.txt  build_app.sh
src/big/utils/examples/hhb/mbv2_onnx_int8/: CMakeLists.txt  hhb.bm  main.c  model.c  model.params  persian_cat.jpg.0.bin_output0_1_1000.txt
src/big/utils/examples/openblas/: CMakeLists.txt  build_app.sh
src/big/utils/examples/openblas/1_openblas_level1/: CMakeLists.txt  openblas_level1.cpp
src/big/utils/examples/openblas/2_openblas_level2/: CMakeLists.txt  openblas_level2.cpp
src/big/utils/examples/openblas/3_openblas_level3/: CMakeLists.txt  openblas_level3.cpp
src/big/utils/examples/openblas/4_fortran_example/: CMakeLists.txt  openblas_fortran.cpp
src/big/utils/examples/opencv/: CMakeLists.txt
src/big/utils/examples/opencv/1_opencv_calcHist/: CMakeLists.txt  opencv_calcHist.cpp
src/big/utils/examples/opencv/2_opencv_threshold/: CMakeLists.txt  opencv_threshold.cpp
src/big/utils/examples/opencv/3_opencv_findContours/: CMakeLists.txt  opencv_findContours.cpp
src/big/utils/examples/opencv/4_opencv_features2d/: CMakeLists.txt  opencv_features2d.cpp
src/big/utils/examples/opencv/5_opencv_objdetect/: CMakeLists.txt  opencv_objdetect.cpp
src/big/utils/lib/freetype/lib/: libfreetype.la
src/big/utils/lib/freetype/lib/pkgconfig/: freetype2.pc
src/big/utils/lib/openblas/include/: openblas_config.h
src/big/utils/lib/openblas/lib/cmake/openblas/: OpenBLASConfig.cmake
src/big/utils/lib/openblas/lib/pkgconfig/: openblas.pc
src/big/utils/lib/opencv_thead/: opencv_thead
src/big/utils/lib/opencv_thead/lib/cmake/opencv4/: OpenCVModules-release.cmake  OpenCVModules.cmake
src/big/utils/lib/sentencepiece/lib/pkgconfig/: sentencepiece.pc
src/little/buildroot-ext/: Makefile
src/little/buildroot-ext/dl/libcurl/: curl-7.74.0.tar.xz
src/little/buildroot-ext/dl/libdrm/: libdrm-2.4.104.tar.xz
src/little/buildroot-ext/dl/qt5serialbus/: qtserialbus-everywhere-src-5.15.2.tar.xz
src/little/buildroot-ext/package/tuning-server/: tuning-server-package_v0.1.1.tar.bz2
src/little/uboot/board/canaan/common/: sdk_autoconf.h
tools/docker/: Dockerfile
